--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
     "react-scripts": "5.0.1",
+    "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^9.1.3",
     "sass": "^1.64.1",
+    "typewriter-effect": "^2.20.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
